--- a/ipd/ppp/plugin/ppppp/gui_new_poll.ui
+++ b/ipd/ppp/plugin/ppppp/gui_new_poll.ui
@@ -15,13 +15,14 @@
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
    <item row="0" column="0">
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,10,0,0">
      <item>
       <widget class="QLabel" name="label_2">
        <property name="font">
         <font>
          <family>Source Code Pro Semibold</family>
-         <pointsize>12</pointsize>
+         <pointsize>16</pointsize>
+         <italic>true</italic>
          <bold>true</bold>
         </font>
        </property>
@@ -58,31 +59,6 @@
        </property>
        <property name="placeholderText">
         <string>Poll Name</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPlainTextEdit" name="desc">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>48</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>256</height>
-        </size>
-       </property>
-       <property name="placeholderText">
-        <string>Poll Description...</string>
        </property>
       </widget>
      </item>
@@ -222,11 +198,36 @@
       </layout>
      </item>
      <item>
-      <layout class="QGridLayout" name="gridLayout">
+      <widget class="QPlainTextEdit" name="desc">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>48</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="placeholderText">
+        <string>Poll Description...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QGridLayout" name="gridLayout" columnstretch="4,3">
        <item row="1" column="0">
         <widget class="QTextEdit" name="cmdstop">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -240,7 +241,7 @@
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>128</height>
+           <height>64</height>
           </size>
          </property>
          <property name="placeholderText">
@@ -248,35 +249,10 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QTextEdit" name="cmdstart">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>32</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>128</height>
-          </size>
-         </property>
-         <property name="placeholderText">
-          <string>Pymol cmds to run on start</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="1">
         <widget class="QPlainTextEdit" name="props">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -290,7 +266,7 @@
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>128</height>
+           <height>64</height>
           </size>
          </property>
          <property name="placeholderText">
@@ -301,7 +277,7 @@
        <item row="1" column="1">
         <widget class="QTextEdit" name="attrs">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -315,11 +291,36 @@
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>128</height>
+           <height>64</height>
           </size>
          </property>
          <property name="placeholderText">
           <string>attribute1=value1, attribute2=value2, ...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QTextEdit" name="cmdstart">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>32</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>64</height>
+          </size>
+         </property>
+         <property name="placeholderText">
+          <string>Pymol cmds to run on start</string>
          </property>
         </widget>
        </item>
